--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,26 @@
-/* styles go here */
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+div {
+  display: block;
+  margin-bottom: 10px;
+}
+
+label:last-child {
+  margin-bottom: 0;
+}
+
+.inline {
+  display: inline;
+  margin-bottom: 10px;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
+
+.recommend {
+  margin-top: 10px;
+}
