--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,14 @@
-label {
+.label {
   display: block;
   margin-bottom: 10px;
 }
 
-div {
+.div {
   display: block;
   margin-bottom: 10px;
 }
 
-label:last-child {
+.label:last-child {
   margin-bottom: 0;
 }
 
@@ -17,7 +17,7 @@ label:last-child {
   margin-bottom: 10px;
 }
 
-fieldset {
+.fieldset {
   margin-bottom: 20px;
 }
 
